option java_package = "test";
option java_outer_classname = "test";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;
option optimize_for = CODE_SIZE;
option go_package = "test";
option cc_generic_services = true;
option java_generic_services = true;
option py_generic_services = true;
option php_generic_services = true;
option deprecated = true;
option cc_enable_arenas = true;
option objc_class_prefix = "test";
option csharp_namespace = "test";
option swift_prefix = "test";
option php_class_prefix = "test";
option php_namespace = "test";
option php_metadata_namespace = "test";
option ruby_package = "test";